Working, but have to declare module in gradle